add new changes to index.html file

--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>The Guest list Project</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <script src="./index.js"></script>
+  
+  <h1 id="heading">Event Guest list</h1>
+  <div class="container">
+  <label id="name">GuestName:</label>
+  <input id="text"> <br><br><br>
+  <div>
+    <button id="submit" onclick="clickSubmit(this)">submit</button>
+    <button class="delete">delete</button>
+  </div>
+  <div class="container2">
+    <h3>Guest LIst</h3>
+    
+  </div>
+
+  </div>
+
 </body>
+<script src="./index.js"></script>
 </html>
