--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <input id="text"> <br><br><br>
   <div>
     <button id="submit" onclick="clickSubmit(this)">submit</button>
-    <button class="delete">delete</button>
+    <button id="delete">delete</button>
   </div>
   <div class="container2">
-    <h3>Guest LIst</h3>
+    <h3>Guest List</h3>
     
   </div>
 
