--- a/index.html
+++ b/index.html
@@ -7,21 +7,16 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
-  <h1 id="heading">Event Guest list</h1>
   <div class="container">
-  <label id="name">GuestName:</label>
-  <input id="text"> <br><br><br>
-  <div>
-    <button id="submit" onclick="clickSubmit(this)">submit</button>
-    <button id="delete">delete</button>
-  </div>
-  <div class="container2">
-    <h3>Guest List</h3>
-    
-  </div>
+    <div class="heading">
+      <h1 id="h1">Event Guest List</h1>
+      <button id="theme-toggle">Toggle</button>
+    </div>
+    <form id="form"></form>
+    <input type="text">
 
   </div>
+  
 
 </body>
 <script src="./index.js"></script>
