add new changes in index.html file

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
       <button id="theme-toggle">Toggle</button>
     </div>
     <form id="form"></form>
-    <input type="text">
-
+    <input id="text" placeholder="Enter Name" type="text">
+  <select id="GuestCategory">
+    <option value="friend">Friends</option>
+    <option value="family">Family</option>
+    <option value="colleague">Colleague</option>
+    <button type="submit">Add</button>
+  </select>
   </div>
   
 
