add new changes to index.js

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
       <h1 id="h1">Event Guest List</h1>
       <button id="theme-toggle">Toggle</button>
     </div>
-    <form id="form"></form>
+    <form id="form">
     <input id="text" placeholder="Enter Name" type="text">
   <select id="GuestCategory">
     <option value="friend">Friends</option>
     <option value="family">Family</option>
     <option value="colleague">Colleague</option>
+    </select>
     <button type="submit">Add</button>
-  </select>
+  </form>
+  <ul id="guestlist"></ul>
   </div>
   
 
