add new changes

--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
   <div class="container">
    <div class="heading">
     <h1>Event guest list</h1>
-    <input id="toggle" type="button" value="toggle">
+    <input class="rsvp-button" id="toggle" type="button" value="toggle">
    </div>
    <div>
+    <form  id="form">
    <label id="username">Guest Name:</label>
-   <input id="input" placeholder="Enter Name" type="text">
+   <input id="guest-name" placeholder="Enter Name" type="text">
+   <p id="list"></p>
    <select  id="category">
     <option value="family">family</option>
     <option value="friends">friends</option>
     <option value="colleague">colleague</option>
    </select>
-   <input id="btn" type="button" value="add">
-   <input id="BTN" type="button" value="delete">
-   <ul id="output"></ul>
+   <button id="btn">Add</button>
+   <ul id="guest-list">
+    
+   </ul>
+   </form>
    </div>
   </div>
-  <script src="./index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
