add new changes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>code challange</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
    <div class="heading">
     <h1>Event guest list</h1>
-    <input class="rsvp-button" id="toggle" type="button" value="toggle">
+    <input class="rsvp-button" id="toggle" type="button" value="attending">
    </div>
    <div>
     <form  id="form">
